Name:               TinySig
Description:        Expands an abbreviated Haskell type signature.

Version:            0.0
Cabal-version:      >= 1.8
Build-type:         Simple

License:            AllRightsReserved
Copyright:          Will Jones
Homepage:           http://www.doc.ic.ac.uk/~wlj05

Library
  Exposed-modules:  Language.Haskell.TinySig.Alex,
                      Language.Haskell.TinySig.Happy

  Other-modules:    Language.Haskell.TinySig.Position

  Build-depends:    array, base, haskell-src-exts
  Build-tools:      alex, happy

  Hs-source-dirs:   src

Executable tinysig
  Other-modules:    Language.Haskell.TinySig.Alex,
                      Language.Haskell.TinySig.Happy,
                      Language.Haskell.TinySig.Position

  Build-depends:    array, base, haskell-src-exts
  Build-tools:      alex, happy

  Main-is:          Language/Haskell/TinySig.hs
  Hs-source-dirs:   src
  Ghc-options:      -main-is Language.Haskell.TinySig

Executable stinysig
  Other-modules:    Language.Haskell.TinySig.Alex,
                      Language.Haskell.TinySig.Happy,
                      Language.Haskell.TinySig.Position

  Build-depends:    array, base, haskell-src-exts
  Build-tools:      alex, happy

  Main-is:          Language/Haskell/TinySig.hs
  Hs-source-dirs:   src
  Ghc-options:      -main-is Language.Haskell.TinySig -static -optc-static
                      -optl-static -fvia-c -optl-pthread
